# react-native-jsi-test

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-geolocation-jsi.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/geolocationjsi/: GeolocationJsiModule.java  GeolocationJsiPackage.java
cpp/: react-native-geolocation-jsi.cpp  react-native-geolocation-jsi.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/geolocationjsiexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/geolocationjsiexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/geolocationjsiexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/GeolocationJsiExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/GeolocationJsiExample.xcodeproj/: project.pbxproj
example/ios/GeolocationJsiExample.xcodeproj/xcshareddata/xcschemes/: GeolocationJsiExample.xcscheme
example/ios/GeolocationJsiExample.xcworkspace/: contents.xcworkspacedata
example/ios/GeolocationJsiExampleTests/: GeolocationJsiExampleTests.m
example/src/: App.tsx
ios/: GeolocationJsi.h  GeolocationJsi.mm
ios/GeolocationJsi.xcodeproj/: project.pbxproj
src/: index.tsx
